# breast_cancer_ML_project

./: .gitignore  .python-version  README.md  pyproject.toml  vision_transform.ipynb
notebooks/: breast_cancer.ipynb  global_cancer_incidence_analisys.ipynb  project.ipynb  vt_image_test.ipynb
