[tool.poetry]
name = "breast-cancer-ml-project"
version = "0.1.0"
description = ""
authors = ["Beatriz Fernandes <beatrizcf2@al.insper.edu.br>"]
readme = "README.md"
packages = [{include = "breast_cancer_ml_project"}]

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.13"
python-dotenv = "^1.0.0"
ipykernel = "^6.23.0"
pandas = "^2.0.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
